--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="inst0"><u>게임 방법!</u></string>
     <string name="inst1">
         <b>1.</b> 문제 혹은 미션을 통과하여 정답 맞추고 해당 QR 코드를 스캔!
-        <b>\n2.</b> 정답이면 점수가 올라가고 오답이면 점수가 내려가요!
-        <b>\n3.</b> 곳곳에 보너스 혹은 꽝이 숨겨져 있어요!
-        <b>\n4.</b> 시간이 지난 후 누가 점수가 제일 높을까요?</string>
+        <b>\n2.</b> 정답이면 점수가 20점 올라가요!
+        <b>\n3.</b> 오답이면 점수가 10점 내려가요!
+        <b>\n4.</b> 게임이 끝난 후 누가 점수가 제일 높을까요?</string>
 </resources>
